--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
