--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
     "pump": "^3.0.0",
-    "puppeteer": "^23.3.0"
+    "puppeteer": "^23.3.0",
+    "socket.io": "^4.8.1"
   }
 }
